implemented the template activity and did get post and delete methods

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.improve10x.crud">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,10 +16,16 @@
         android:theme="@style/Theme.Crud"
         tools:targetApi="31">
         <activity
-            android:name=".AddMessageActivity"
+            android:name="templates.AddTemplateActivity"
             android:exported="false" />
         <activity
-            android:name=".MessageActivity"
+            android:name="templates.TemplateActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity$AddMessageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".messages.MessageActivity"
             android:exported="false" />
         <activity
             android:name=".DashboardActivity"
