Renamed activity_add_series.xml,activity_template_xml, AddSeriesActivity,AddTemplateActivity,AndroidManifest.xml,DashboardActivity,Template,TemplatesActivity,TemplatesAdapter,TemplatesApi,TemplatesService

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:name="templates.AddTemplateActivity"
             android:exported="false" />
         <activity
-            android:name="templates.TemplateActivity"
+            android:name="templates.TemplatesActivity"
             android:exported="false" />
         <activity
             android:name=".messages.AddMessagesActivity$AddMessageActivity"
