--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,10 @@
         </intent-filter>
     </activity>
         <activity
-            android:name=".series.AddSeriesActivity"
+            android:name=".series.AddSeriesItemActivity"
             android:exported="false" />
         <activity
-            android:name=".series.SeriesListActivity"
+            android:name=".series.SeriesItemsActivity"
             android:exported="false" />
         <activity
             android:name="templates.AddTemplateActivity"
