created AddQuotesActivity and xml design implemented DashboardActivity, quotes_item.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,14 @@
         android:theme="@style/Theme.Crud"
         tools:targetApi="31">
         <activity
-            android:name=".QuotesActivity"
+            android:name=".AddQuotesActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Quotes.QuotesActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
